# skill-bridge-career-navigator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API.md  DESIGN_DOCUMENT.md  Dockerfile  Makefile  README.md  ai_engine.py  alembic.ini  api_client.py  app.py  docker-compose.yml  entrypoint.sh  gap_analyzer.py  job_catalog.py  models.py  profile_manager.py  profile_printer.py  pyproject.toml  render.yaml  requirements.txt  resume_parser.py  roadmap_generator.py  run.py  wsgi.py
.github/workflows/: build-and-publish.yml  ci.yml
.streamlit/: secrets.toml.example
app/: __init__.py  config.py  extensions.py
app/api/v1/: analyses.py  auth.py  health.py  jobs.py  profiles.py  resume.py  roadmaps.py
app/auth/: __init__.py  context.py  decorator.py  hashing.py  tokens.py
app/core/: __init__.py  ai_engine.py  gap_analyzer.py  job_catalog.py  models.py  profile_manager.py  profile_printer.py  resume_parser.py  roadmap_generator.py
app/db/: __init__.py  base.py  engine.py  models.py  session.py
app/repositories/: _mappers.py  analysis_repo.py  base.py  job_repo.py  profile_repo.py  refresh_token_repo.py  roadmap_repo.py  sql_analysis_repo.py  sql_job_repo.py  sql_profile_repo.py  sql_refresh_token_repo.py  sql_roadmap_repo.py  sql_user_repo.py  user_repo.py
app/schemas/: analysis.py  auth.py  common.py  job.py  profile.py  resume.py  roadmap.py
app/utils/: __init__.py  errors.py  logging.py  validation.py
data/: jobs.json  learning_resources.json  skill_taxonomy.json
decisions/: ADR-001-app-factory-and-blueprints.md  ADR-002-pydantic-v2.md  ADR-003-repository-protocol.md  ADR-004-correlation-id-and-logging.md  ADR-005-stable-slug-job-ids.md  ADR-006-streamlit-shims.md  ADR-007-dual-backend-repositories.md  ADR-008-alembic-workflow.md  ADR-009-session-per-request.md  ADR-010-jsonb-portability.md  ADR-011-catalog-vs-db-boundary.md  ADR-012-argon2-password-hashing.md  ADR-013-jwt-hs256-rotating-refresh.md  ADR-014-additive-protocol-extension.md  ADR-015-404-over-403.md  ADR-016-flask-limiter-in-memory.md  ADR-017-cors-env-allowlist.md  ADR-018-tooling-choices.md  ADR-019-deploy-architecture.md  ADR-020-streamlit-api-integration.md  README.md
migrations/: README  env.py
migrations/versions/: 0001_initial_schema.py  0002_users_not_null_fk.py  0003_refresh_tokens.py
scripts/: __init__.py  seed_db.py
tests/: conftest.py  factories.py
tests/integration/: __init__.py  test_alembic_smoke.py  test_analyses_api.py  test_auth_login.py  test_auth_logout.py  test_auth_me.py  test_auth_refresh.py  test_auth_register.py  test_error_contract.py  test_health.py  test_jobs_api.py  test_multi_tenant_isolation.py  test_profiles_api.py  test_rate_limits.py  test_resume_api.py  test_roadmaps_api.py  test_sql_persistence.py
tests/properties/: __init__.py  test_access_ttl.py  test_api_client_properties.py  test_error_envelope_closure_phase3.py  test_jsonb_roundtrip.py  test_logout_invalidates_once.py  test_multi_tenant_isolation_prop.py  test_properties.py  test_refresh_rotation.py  test_repository_equivalence.py  test_seed_idempotency.py  test_slug_stability.py  test_sql_pagination.py
tests/unit/: __init__.py  test_api_client.py  test_backend_selection.py  test_config_backend_selection.py  test_db_engine.py  test_decorator.py  test_factories.py  test_gap_analysis.py  test_hashing.py  test_mappers.py  test_orm_models.py  test_phase3_config.py  test_repositories.py  test_roadmap_generator_ids.py  test_seed_db.py  test_tokens.py  test_user_repo_equivalence.py
